ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micros-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: front-end-service.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 8081
    - host: broker-service.info
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: broker-service
                port:
                  number: 8080
    - host: mailhog.info
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 1025
    - host: rabbitmq.info
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 5672
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
